Amarok ChangeLog
================
(C) 2002-2013 the Amarok authors.


VERSION 2.8
  BUGFIXES:
  * Removed broken Apply button in applets' settings dialog. (BR 322015)
  * Fix incorrect colors in Context View toolbar when switching themes. (BR 301305)
  * Many fixes for various bugs with switching desktop color themes at runtime,
    including OSD, spectrum analyzer, collection browser.

  CHANGES:
   * Amarok now depends on Qt 4.8.3.


VERSION 2.8-Beta 1
  FEATURES:
   * Ctrl+C copies the currently playing artist & title to the clipboard. (BR 228872)
     Patch by fleissig fleissig <fleissig@yandex.ru>.
   * Volume fade-out is now also available for pause.
   * The Files browser now has a Refresh button. (BR 213666)
   * The active playlist item is animated with a soft glow effect.
   * Added an audio analyzer visualization applet.
   * Added a function for resetting the GUI layout back to default state. (BR 300753)
   * Pressing enter when searching collections now adds found tracks to the playlist and
     clears the search bar, this is a very convenient way to populate your playlist.
   * Allow to transcode only certain (different format, playability) tracks when
     transferring them to a collection; patch by Anmol Ahuja. (BR 312407)
   * On-Screen-Display fades in/out smoothly.
   * Added support for .asx playlists; patch by Tatjana Gornak. (BR 170207)
   * Add Radio GFM radio streams to Cool Stream Script. (BR 317978)
   * Added options to pause playback on system suspend and to inhibit automatic suspend
     if playing a track (enabled by default); patch by Anmol Ahuja.
     (BR 259862) (BR 222571)
   * Playlist files are now read asynchronously when possible; patch and great deal of
     refactoring by Tatjana Gornak. (BR 291934)
   * Added support to filter tracks to scrobble to Last.fm by label. Patch by Vedant
     Agarwala. (BR 140198)
   * Added transcoding support for Opus codec if ffmpeg is compiled with support for the